# celpip-trainer

./: .env  .gitignore  DEPLOYMENT_GUIDE.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  REFACTORING_SUMMARY.md  main.py  pyproject.toml  requirements-vercel.txt  test_writing_task1.py  vercel.json
backend/app/: config.py  main.py
backend/app/models/: __init__.py  images.py  listening.py  reading.py  speaking.py  writing.py
backend/app/routers/: images.py  listening.py  reading.py  speaking.py  writing.py
backend/app/services/: anthropic_service.py  celpip_generator.py  llm_provider.py  llm_service.py  speech_service.py
backend/app/services/prompts/: __init__.py  listening_prompts.py  reading_prompts.py  speaking_prompts.py  writing_prompts.py
backend/app/services/providers/: __init__.py  gemini_provider.py
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json  vercel.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: Dashboard.tsx  ListeningPart1.tsx  ListeningPart2.tsx  ListeningPart3.tsx  ListeningPart4.tsx  ListeningPart5.tsx  ListeningPart6.tsx  ReadingTask1.tsx  ReadingTask2.tsx  ReadingTask3.tsx  ReadingTask4.tsx  SpeakingTask1.tsx  SpeakingTask2.tsx  SpeakingTask3.tsx  SpeakingTask4.tsx  SpeakingTask5.tsx  SpeakingTask6.tsx  SpeakingTask7.tsx  SpeakingTask8.tsx  WritingTask1.tsx  WritingTask2.tsx
frontend/src/services/: api.ts  audioPlayback.ts  audioRecording.ts  speechToText.ts  textToSpeech.ts
nginx/: generate-ssl.sh  nginx.conf
