[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "google-genai>=0.3.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "fastapi-cors>=0.0.6",
    "tenacity>=8.2.0",
    "vosk>=0.3.45",
    "soundfile>=0.12.1",
    "librosa>=0.10.0",
]
